--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,7 +45,7 @@
 }
 
 .dark-background {
-  --background-color: #363636;
+  --background-color: #8a8a8a;
   --default-color: #ffffff;
   --heading-color: #ffffff;
   --surface-color: #313131;
